[package]
name = "phf"
authors = ["Steven Fackler <sfackler@gmail.com>"]
version = "0.7.9"
license = "MIT"
description = "Runtime support for perfect hash function data structures"
repository = "https://github.com/sfackler/rust-phf"
documentation = "https://sfackler.github.io/rust-phf/doc/v0.7.9/phf"

[lib]
name = "phf"
path = "src/lib.rs"
test = false

[features]
use_core = ["phf_shared/use_core"]

[dependencies]
phf_shared = { version = "=0.7.9", path = "../phf_shared" }

[target.x86_64-unknown-none-gnu.dependencies.core]
git = "https://github.com/phil-opp/nightly-libcore.git"
features = [ "disable_float" ]
