[package]
name = "phf_shared"
authors = ["Steven Fackler <sfackler@gmail.com>"]
version = "0.7.9"
license = "MIT"
description = "Support code shared by PHF libraries"
repository = "https://github.com/sfackler/rust-phf"
documentation = "https://sfackler.github.io/rust-phf/doc/v0.7.9/phf_shared"

[lib]
name = "phf_shared"
path = "src/lib.rs"
test = false

[features]
use_core = []

[target.x86_64-unknown-none-gnu.dependencies.core]
git = "https://github.com/phil-opp/nightly-libcore.git"
features = [ "disable_float" ]
